# DPL-GA

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
electron/: main.ts  preload.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: download.rs  launch.rs  mac_ban.rs  mod.rs  system_info.rs
src/lib/: cache.ts  firebase.ts  ipc.ts  themes.ts  updater.ts
src/screens/: HomeScreen.tsx  HtmlEmbedFrame.tsx  SettingsScreen.tsx  SplashScreen.tsx
src/styles/: global.css
src/types/: index.ts
